--- a/src/app.less
+++ b/src/app.less
@@ -1,7 +1,107 @@
+@import "utils/colors";
+
+@import url('https://fonts.googleapis.com/css2?family=Jost:wght@200;300;900&display=swap');
+
+body {
+  font-family: 'Jost', sans-serif;
+  background: rgba(0, 0, 0, 0.9);
+  padding: 0;
+  margin: 0;
+}
+
 .container {
   margin: 0;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.navbar {
+  width: 100%;
+  height: 47px;
+  background: #252525;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+
+  &__logo {
+    font-weight: 900;
+    font-size: 2rem;
+    margin-left: 20px;
+    color: @text-accent-color;
+
+  }
+
+  &__menu {
+    margin-right: 20px;
+    color: @text-accent-color;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+  }
+
+  &__menuitem {
+    font-weight: 500;
+    font-style: normal;
+    font-size: 1.2rem;
+    letter-spacing: 0.05em;
+    text-decoration: none;
+    padding: 0 0.5rem;
+
+    &:link, &:visited {
+      color: @text-color;
+    }
+    &:hover {
+      color: @text-accent-color;
+    }
+  }
+
+  &__menusep {
+    font-size: 1.3rem;
+  }
+}
+
+.main {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: 15px;
+}
+
+.descphoto {
+  width: 400px;
+  height: 500px;
+  background: @panel-color;
+  border-radius: 3px;
+}
+
+.desctext {
+  font-weight: 200;
+  font-size: 2.5rem;
+  margin-left: 20px;
+  color: @text-color;
+  text-align: right;
+  margin-right: 20px;
+}
+
+.footer_divider {
+  width: 100%;
+  margin: 15px;
+}
+
+.footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+}
+
+.copyright {
+  font-weight: 200;
+  color: @text-color;
+  margin-right: 20px;
 }
