--- a/src/components/Navbar/Navbar.module.less
+++ b/src/components/Navbar/Navbar.module.less
@@ -7,7 +7,15 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-around;
+
+  &__content {
+    width: 1000px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+  }
 
   &__logo {
     font-weight: 900;
