--- a/src/components/pages/Home/Home.module.less
+++ b/src/components/pages/Home/Home.module.less
@@ -4,8 +4,15 @@
   width: 100%;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
-  margin: 15px;
+  justify-content: space-around;
+
+  &__content {
+    width: 1000px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin: 15px;
+  }
 }
 
 .descphoto {
