--- a/src/App.module.less
+++ b/src/App.module.less
@@ -1,11 +1,16 @@
+/*
+ * Copyright (c) Alexander Bulanov 2021.
+ */
+
 @import "utils/colors";
 @import "utils/fonts";
 
 body {
   margin: 0;
-  padding: 0;
   background: @background-color;
   font-family: 'Jost', sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 .App {
