Configured Typography to use custom font

--- a/src/utils/fonts.less
+++ b/src/utils/fonts.less
@@ -1,1 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Jost:wght@200;300;900&display=swap');
+/*
+ * Copyright (c) Alexander Bulanov 2021.
+ */
+
+@import url('https://fonts.googleapis.com/css2?family=Jost:wght@200;300;500;700;900&display=swap');
